--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -48,13 +48,26 @@
   }
 }
 
+@media (width <=390px) {
+  .title__img {
+    width: 250px;
+  }
+}
+
 /* About title */
 .title {
   color: rgb(var(--accent-color-pink));
   font-size: var(--font-4xl);
   display: flex;
+  align-items: center;
   column-gap: 1rem;
   margin-bottom: 1rem;
+}
+
+@media (width <=390px) {
+  .title {
+    font-size: var(--font-2xl);
+  }
 }
 
 .title--shop {
@@ -74,6 +87,7 @@
   .subtitle,
   .subtitle-accent {
     font-size: var(--font-base);
+    margin: 0 1rem;
   }
 }
 
@@ -106,12 +120,13 @@
 
 @media (width <=390px) {
   .statement {
-    font-size: var(--font-m);
+    width: 85%;
+    font-size: var(--font-s);
   }
 }
 
 .two-tones-bg {
-  width: 100vw;
+  width: 100%;
   position: absolute;
   inset: 0;
   z-index: -99;
@@ -230,7 +245,26 @@
   overflow-x: auto;
   scroll-behavior: smooth;
   white-space: nowrap;
+  position: relative;
 }
+
+.shop__grid::after {
+  content: "";
+  width: 60px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 2;
+  background-image: linear-gradient(90deg, rgba(var(--white), 0), rgba(var(--white), 1));
+}
+
+@media (width <=768px) {
+  .shop__grid::after {
+    display: none;
+  }
+}
+
 
 /* 前往商店連結區塊 */
 .shop__hintbox {
