--- a/src/pages/News.module.css
+++ b/src/pages/News.module.css
@@ -1,4 +1,5 @@
 .banner {
+  width: 100%;
   display: flex;
   justify-content: flex-end;
   margin-top: 60px;
@@ -15,6 +16,7 @@
 }
 
 .section__bg {
+  width: 100%;
   background-color: rgba(var(--primary-color-light), 0.1);
   padding: 2rem 0;
   display: grid;
@@ -31,6 +33,10 @@
 @media (width <=455px) {
   .section__title {
     justify-content: center;
+  }
+
+  .section__img {
+    width: 250px;
   }
 }
 
